ADIN1200_Implementation: - added event handler interface file for feedback logging - added IRegister interface as location for the ReadRegister declaration for the register listing - added these interfaces to IADIN1200 and IADIN1300
- added additional registers not included in the json files to prevent exposure, and method to add the registers

- removed additional register container for the background thread

- set "None" as default chosen option for clock pin control
- added testmodeview xaml file

- uncommented InsertNewDevice when insert event fired for when IsComOpen is true (there is a selected device already)
- added lock for this portion
- added variable for feedback on device insert/remove to disable adding serial number of currently selected device

- added framelength for the ITestmode interface
- added bool if requiring frame length to TestModeListingModel class
- added SetTestModeFrameLength for changing testmodeframelength
- changed testmode command and method to add framelength as parameter
- added method for doing poll on yoda register
- added options for testmode with framelengths

- added option for setfeedback to contain serial number of currently selected device or not

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -92,6 +92,8 @@
     <Compile Include="Services\IADIN1200API.cs" />
     <Compile Include="Services\IADIN1300API.cs" />
     <Compile Include="Services\IAdvertisedSpeed.cs" />
+    <Compile Include="Services\IEventHandlers.cs" />
+    <Compile Include="Services\IRegisterList.cs" />
     <Compile Include="Services\ITestMode.cs" />
     <Compile Include="Services\IAutoMDIX.cs" />
     <Compile Include="Services\ICableDiagnostic.cs" />
