ADIN1200_Implementation: - changed names of interfaces for IFirmwareAPI to add "API" at the end to signify an API interface - removed IRegisterList and IEventHandler - contents from above are moved to IFirmwareAPI - changed name for IsRequiringFrameLength - changed testmode command to use testmode object instead of button command parameter - added ADI secondary colors to white theme - used ADI Mid Blue as background color for activity log title - changed some description logs at ADIN1200 firmware API (removed "GE") - added and edited existing locks to name mainLock from app.xaml.cs down to firmwareAPI - added mainLock as parameter to pass on the same general/common lock

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -91,15 +91,13 @@
     <Compile Include="Services\ADINConfirmBoard.cs" />
     <Compile Include="Services\IADIN1200API.cs" />
     <Compile Include="Services\IADIN1300API.cs" />
-    <Compile Include="Services\IAdvertisedSpeed.cs" />
-    <Compile Include="Services\IEventHandlers.cs" />
-    <Compile Include="Services\IRegisterList.cs" />
-    <Compile Include="Services\ITestMode.cs" />
-    <Compile Include="Services\IAutoMDIX.cs" />
+    <Compile Include="Services\IAdvertisedSpeedAPI.cs" />
+    <Compile Include="Services\ITestModeAPI.cs" />
+    <Compile Include="Services\IAutoMDIXAPI.cs" />
     <Compile Include="Services\ICableDiagnostic.cs" />
-    <Compile Include="Services\IClockPinControl.cs" />
-    <Compile Include="Services\IDownSpeed.cs" />
-    <Compile Include="Services\IEnergyDetect.cs" />
+    <Compile Include="Services\IClockPinControlAPI.cs" />
+    <Compile Include="Services\IDownSpeedAPI.cs" />
+    <Compile Include="Services\IEnergyDetectAPI.cs" />
     <Compile Include="Services\IFirmwareAPI.cs" />
     <Compile Include="Services\IMDIOAPI.cs" />
     <Compile Include="Services\ScriptService.cs" />
