ADIN1200_Implementation: - renamed ADINButtonsView to ExtraCommandsView - added PhyAddress, DeviceType and DeviceStatus   - Device Status currently includes IsSoftwarePowerDown   - added interface and ADIN1200 files for declaration and for initial value - changed ADIN models to output its physical address to be used for devicelisting's phyaddress (default = 0) - added phyaddress and device type determination at devicelisting - added device status view beside link properties and test mode at their tabs - added device status view and extrabuttons view to operations view, as well as their viewmodels - added GetPhyState and GetLinkStatus to firmware API (empty implementation to 1300) - added softwarepowerdownbuttontext at extra command view model to set and get state for issoftwarepowerdown - added softwarepowerdownbuttontext to be called by power down command - changed some buttonstyle as software power down button is changed to toggle button - commented out anstatus, generator, link length, master slave status, mse value and txlevelstatus at devicestatus viewmodel - adjusted other variables to use new structure

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -54,12 +54,15 @@
   <ItemGroup>
     <Compile Include="Models\ActiveLinkModel.cs" />
     <Compile Include="Models\ADIN1200Model.cs" />
+    <Compile Include="Models\ADIN1200\DeviceStatusADIN1200.cs" />
     <Compile Include="Models\ADIN1200\TestModeADIN1200.cs" />
     <Compile Include="Models\ADIN1200\ClockPinControlADIN1200.cs" />
     <Compile Include="Models\ADIN1200\LinkPropertiesADIN1200.cs" />
     <Compile Include="Models\ADIN1300Model.cs" />
     <Compile Include="Models\ADIN1300\ClockPinControlADIN1300.cs" />
+    <Compile Include="Models\DeviceStatusModel.cs" />
     <Compile Include="Models\IClockPinControl.cs" />
+    <Compile Include="Models\IDeviceStatus.cs" />
     <Compile Include="Models\ITestMode.cs" />
     <Compile Include="Models\ILinkProperties.cs" />
     <Compile Include="Models\ADIN1300\LinkPropertiesADIN1300.cs" />
