ADIN1200_Implementation: - applied locks at device listing viewmodel during device selection, insertion and removal to prioritize these processes against background threads - applied removal of writeprocesscompleted event upon device removal/changing to prevent feedbacklock duplication - added new action linkstatuschanged - added onlinkstatuschanged and onsoftwarepowerdownchanged at selecteddevicestore - updated devicestatus view model to update link status events - updated software powerdown command - added file disable link command and auto neg command - added methods for firmware API for enable/disable link and restarting auto negotiation (linking) - updated extracommands view model   - added and used _powerdownstatus (getting value from device status view model) for uses of _linkstatus   - change _linkstatus to get the linkstatus from device status instead of powerdownstatus   - changed SoftwarePowerDownButtonText to PowerDownStatus to use _powerdownstatus state, to be used for function and state of software power button   - added LinkStatus to use _linkstatus to be used for function and state of enable/disable linking button   - added IsPoweredUp and _isPoweredUp as basis for enabling enable/disable link button and restart linking button

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -130,8 +130,10 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AutoVersionIncrement.tt</DependentUpon>
     </Compile>
+    <Compile Include="Commands\AutoNegCommand.cs" />
     <Compile Include="Commands\ClearLogCommand.cs" />
     <Compile Include="Commands\CommandBase.cs" />
+    <Compile Include="Commands\DisableLinkCommand.cs" />
     <Compile Include="Commands\LogWindowSaveCommand.cs" />
     <Compile Include="Commands\NavigateCommand.cs" />
     <Compile Include="Commands\ClockPinControlCommand.cs" />
