ADIN1200_Implementation: - read and write register commands - added functionalities on register access viewmodel needed for commands - added methods for firmware API needed for register read/write - added registeraccessview to operationview - changed layout to put registeraccess to the left and the activity log to the right

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -137,8 +137,10 @@
     <Compile Include="Commands\LogWindowSaveCommand.cs" />
     <Compile Include="Commands\NavigateCommand.cs" />
     <Compile Include="Commands\ClockPinControlCommand.cs" />
+    <Compile Include="Commands\ReadRegisterCommand.cs" />
     <Compile Include="Commands\SoftwarePowerDownCommand.cs" />
     <Compile Include="Commands\TestModeCommand.cs" />
+    <Compile Include="Commands\WriteRegisterCommand.cs" />
     <Compile Include="Components\NavigationBar.xaml.cs">
       <DependentUpon>NavigationBar.xaml</DependentUpon>
     </Compile>
