ADIN1200_Implementation: - added device status view for frame generator/checker tab - enabled (uncommented) checker, generator and MSE value at the view model - removed read register background thread at device status view model as it is already placed at registerlisting view model - added events and methods needed for generator, checker and MSE at firmware API - added events needed above to selected device store - changed placeholder device status view to frame gen checker status view at operation view

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -171,6 +171,9 @@
     <Compile Include="ViewModel\RegisterListingViewModel.cs" />
     <Compile Include="ViewModel\TestModeViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="View\FrameGenCheckerStatusView.xaml.cs">
+      <DependentUpon>FrameGenCheckerStatusView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\ExtraCommandsView.xaml.cs">
       <DependentUpon>ExtraCommandsView.xaml</DependentUpon>
     </Compile>
@@ -249,6 +252,10 @@
     <Page Include="Themes\WhiteTheme.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\FrameGenCheckerStatusView.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="View\ExtraCommandsView.xaml">
       <SubType>Designer</SubType>
