ADIN1200_Implementation: - added Loopback command to loopback view model and Remote Loopback command to framegenchecker view model - added loopback.png and set all adin1200 loopbacks imagepath to loopback.png - changed loopback dropdown selection to radio buttons - added (updated) image for loopback view - added register writes for firmware API method for remote loopback - absorbed set Rx/Tx suppression setting method to set loopback setting - added remote loopback button to frame gen checker view - implemented save/load register commands to save and load buttons at extracommands - updated register action commands to use local register variable and to use info type feedback log - updated read registers to return observable collection register model - removed clock pin control tab and rearraged tabs - set register access at operation view to have fixed width

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -132,6 +132,8 @@
     </Compile>
     <Compile Include="Commands\AutoNegCommand.cs" />
     <Compile Include="Commands\ClearLogCommand.cs" />
+    <Compile Include="Commands\RemoteLoopbackCommand.cs" />
+    <Compile Include="Commands\LoopbackCommand.cs" />
     <Compile Include="Commands\CommandBase.cs" />
     <Compile Include="Commands\DisableLinkCommand.cs" />
     <Compile Include="Commands\ExecuteFrameCheckerCommand.cs" />
@@ -139,6 +141,7 @@
     <Compile Include="Commands\NavigateCommand.cs" />
     <Compile Include="Commands\ClockPinControlCommand.cs" />
     <Compile Include="Commands\ReadRegisterCommand.cs" />
+    <Compile Include="Commands\RegisterActionCommand.cs" />
     <Compile Include="Commands\ResetFrameDeviceCheckerCommnad.cs" />
     <Compile Include="Commands\SoftwarePowerDownCommand.cs" />
     <Compile Include="Commands\TestModeCommand.cs" />
@@ -483,6 +486,7 @@
       <AlwaysRun>True</AlwaysRun>
       <RunCustomToolOnBuild>True</RunCustomToolOnBuild>
     </Content>
+    <Resource Include="Images\loopback\loopback.png" />
     <Resource Include="Images\adin1200\03ec687cd2e0416bd18737fd6961b6e7.png" />
     <Resource Include="Images\adin1200\05f1755eab3b667f2d53cb8f4e0fdbc5.png" />
     <Resource Include="Images\adin1200\079cef858fd0ca76523efe4a0b54ada4.png" />
