--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\ADIN1200\LinkPropertiesADIN1200.cs" />
     <Compile Include="Models\ADIN1300Model.cs" />
     <Compile Include="Models\ADIN1300\ClockPinControlADIN1300.cs" />
+    <Compile Include="Models\ADIN1300\DeviceStatusADIN1300.cs" />
     <Compile Include="Models\DeviceStatusModel.cs" />
     <Compile Include="Models\IClockPinControl.cs" />
     <Compile Include="Models\IDeviceStatus.cs" />
