ADIN1200_Implementation: - added local and remote advertised speeds - added command functionalities for reset buttons

--- a/ADIN.WPF/ADIN.WPF.csproj
+++ b/ADIN.WPF/ADIN.WPF.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Commands\ClockPinControlCommand.cs" />
     <Compile Include="Commands\ReadRegisterCommand.cs" />
     <Compile Include="Commands\RegisterActionCommand.cs" />
+    <Compile Include="Commands\ResetCommand.cs" />
     <Compile Include="Commands\ResetFrameDeviceCheckerCommnad.cs" />
     <Compile Include="Commands\SoftwarePowerDownCommand.cs" />
     <Compile Include="Commands\TestModeCommand.cs" />
