--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -63,6 +63,9 @@
     <Compile Include="Models\ADIN1300Model.cs" />
     <Compile Include="Models\ADIN1300\ClockPinControlADIN1300.cs" />
     <Compile Include="Models\ADIN1300\DeviceStatusADIN1300.cs" />
+    <Compile Include="Models\ADIN1300\FrameGenCheckerADIN1300.cs" />
+    <Compile Include="Models\ADIN1300\LoopbackADIN1300.cs" />
+    <Compile Include="Models\ADIN1300\TestModeADIN1300.cs" />
     <Compile Include="Models\DeviceStatusModel.cs" />
     <Compile Include="Models\IClockPinControl.cs" />
     <Compile Include="Models\IDeviceStatus.cs" />
