--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\ActiveLinkModel.cs" />
+    <Compile Include="Models\ADIN1100Model.cs" />
     <Compile Include="Models\ADIN1200Model.cs" />
     <Compile Include="Models\ADIN1200\DeviceStatusADIN1200.cs" />
     <Compile Include="Models\ADIN1200\FrameGenCheckerADIN1200.cs" />
@@ -97,9 +98,11 @@
     <Compile Include="Models\TestModeListingModel.cs" />
     <Compile Include="Models\TestModeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ADIN1100FirmwareAPI.cs" />
     <Compile Include="Services\ADIN1200FirmwareAPI.cs" />
     <Compile Include="Services\ADIN1300FirmwareAPI.cs" />
     <Compile Include="Services\ADINConfirmBoard.cs" />
+    <Compile Include="Services\IADIN1100API.cs" />
     <Compile Include="Services\IADIN1200API.cs" />
     <Compile Include="Services\IADIN1300API.cs" />
     <Compile Include="Services\IAdvertisedSpeedAPI.cs" />
@@ -143,6 +146,9 @@
     <None Include="Scripts\SftPd Down&amp;Up_scripts.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Models\ADIN1100\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
