Device Status info added more Testmode Implemented

--- a/ADIN.Device/ADIN.Device.csproj
+++ b/ADIN.Device/ADIN.Device.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Models\ActiveLinkModel.cs" />
     <Compile Include="Models\ADIN1100Model.cs" />
     <Compile Include="Models\ADIN1100\LinkPropertiesADIN1100.cs" />
+    <Compile Include="Models\ADIN1100\TestModeADIN1100.cs" />
     <Compile Include="Models\ADIN1200Model.cs" />
     <Compile Include="Models\ADIN1200\DeviceStatusADIN1200.cs" />
     <Compile Include="Models\ADIN1200\FrameGenCheckerADIN1200.cs" />
